Closed
Bug 435779
Opened 17 years ago
Closed 17 years ago
Crash [@ PostMessageEvent::Run()]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: smaug, Assigned: smaug)
References
Details
(Keywords: crash, fixed1.9.0.9, topcrash, Whiteboard: [RC2-])
Crash Data
Attachments
(1 file)
|
1.07 KB,
patch
|
jst
:
review+
jst
:
superreview+
mconnor
:
approval1.9.0.4-
dveditz
:
approval1.9.0.9+
|
Details | Diff | Splinter Review |
While running mochitest, I got the following crash:
0x00000032d900d97f in waitpid () from /lib64/libpthread.so.0
#0 0x00000032d900d97f in waitpid () from /lib64/libpthread.so.0
#1 0x00000032e8a57c97 in ?? () from /usr/lib64/libgnomeui-2.so.0
#2 0x00002aaaaaaf538a in nsProfileLock::FatalSignalHandler (signo=11) at nsProfileLock.cpp:216
#3 <signal handler called>
#4 PostMessageEvent::Run (this=0x84610b0) at /home/smaug/mozilla/mozilla_cvs/hg/mozilla/dom/src/base/nsGlobalWindow.cpp:5239
#5 0x00002aaaab271209 in nsThread::ProcessNextEvent (this=0x66c510, mayWait=1, result=0x7fffe85b7fec)
at /home/smaug/mozilla/mozilla_cvs/hg/mozilla/xpcom/threads/nsThread.cpp:510
#6 0x00002aaaab22efb7 in NS_ProcessNextEvent_P (thread=0x32d734b840, mayWait=1) at nsThreadUtils.cpp:227
#7 0x00002aaab98361da in nsBaseAppShell::Run (this=0xcc64d0)
at /home/smaug/mozilla/mozilla_cvs/hg/mozilla/widget/src/xpwidgets/nsBaseAppShell.cpp:170
#8 0x00002aaab707b24d in nsAppStartup::Run (this=0xc8f240)
at /home/smaug/mozilla/mozilla_cvs/hg/mozilla/toolkit/components/startup/src/nsAppStartup.cpp:181
#9 0x00002aaaaaae9f43 in XRE_main (argc=<value optimized out>, argv=<value optimized out>, aAppData=<value optimized out>)
at /home/smaug/mozilla/mozilla_cvs/hg/mozilla/toolkit/xre/nsAppRunner.cpp:3170
#10 0x0000000000400eba in main (argc=5, argv=0x0)
at /home/smaug/mozilla/mozilla_cvs/hg/mozilla/browser/app/nsBrowserApp.cpp:158
Seems like targetWindow is null - and that is possible for example after closing
a window.
| Assignee | ||
Comment 1•17 years ago
|
||
| Assignee | ||
Updated•17 years ago
|
Attachment #322553 -
Flags: review? → review?(jwalden+bmo)
| Assignee | ||
Updated•17 years ago
|
Attachment #322553 -
Flags: superreview?(jst)
| Assignee | ||
Updated•17 years ago
|
Flags: wanted1.9.0.x?
Updated•17 years ago
|
Whiteboard: [RC2] → [RC2?]
Updated•17 years ago
|
Attachment #322553 -
Flags: superreview?(jst)
Attachment #322553 -
Flags: superreview+
Attachment #322553 -
Flags: review?(jwalden+bmo)
Attachment #322553 -
Flags: review+
Comment 3•17 years ago
|
||
3.0.1 will enjoy this patch tremendously, especially if we have a test that actually exercises this deterministically.
Flags: wanted1.9.0.x?
Flags: wanted1.9.0.x+
Flags: in-testsuite?
Updated•17 years ago
|
Whiteboard: [RC2?] → [RC2-]
Comment 4•17 years ago
|
||
Maybe we just need a Cu.forceGC() in test_postMessage_closed.html somewhere to trigger it deterministically?
| Assignee | ||
Updated•17 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 5•17 years ago
|
||
Checḱed in to hg.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•17 years ago
|
Keywords: checkin-needed
Comment 6•17 years ago
|
||
Did this land in CVS yet? If not, should it per comment 3? Please request approval on the patch if so.
| Assignee | ||
Updated•17 years ago
|
Attachment #322553 -
Flags: approval1.9.0.4?
Comment 7•17 years ago
|
||
not a top crash, only 17 crashes and the 100th top crash has 276 in the current stats window. Is this worth the risk given we don't have a test for it?
Keywords: crash
Comment 8•17 years ago
|
||
Comment on attachment 322553 [details] [diff] [review]
null check
Would probably approve if this had tests, but not going to take without it, given that its quite rare, per dveditz.
Attachment #322553 -
Flags: approval1.9.0.4? → approval1.9.0.4-
Updated•17 years ago
|
Flags: wanted1.9.0.x+
| Assignee | ||
Comment 9•16 years ago
|
||
Comment on attachment 322553 [details] [diff] [review]
null check
For some reason this is now quite high up in the 3.0.6 topcrashers.
Attachment #322553 -
Flags: approval1.9.0.8?
Comment 10•16 years ago
|
||
Hm, yeah. Strangely this is the number 2 topcrash for Firefox 3.0.6. We should probably block on this too.
Flags: blocking1.9.0.8?
Keywords: topcrash
Updated•16 years ago
|
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.8?
Flags: blocking1.9.0.8+
Updated•16 years ago
|
Attachment #322553 -
Flags: approval1.9.0.8? → approval1.9.0.8+
Comment 11•16 years ago
|
||
Comment on attachment 322553 [details] [diff] [review]
null check
Approved for 1.9.0.8, a=dveditz for release-drivers
| Assignee | ||
Updated•16 years ago
|
Keywords: fixed1.9.0.8
Updated•16 years ago
|
Flags: wanted1.8.1.x-
Updated•14 years ago
|
Crash Signature: [@ PostMessageEvent::Run()]
Updated•12 years ago
|
Component: DOM: Mozilla Extensions → DOM
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•