Bug 435779, Crash [@ PostMessageEvent::Run()], r+sr=jst